--- a/src/components/TypeSelection.css
+++ b/src/components/TypeSelection.css
@@ -1,10 +1,9 @@
-/* TypeSelection.css */
 
 .type-selection-container {
   display: flex;
-  flex-direction: column; /* Promena iz row u column */
-  align-items: center; /* Centriranje elemenata */
-  justify-content: flex-start; /* Početak sadržaja od vrha */
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   padding: 20px;
 }
 
