--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("./data/images/background.jpg");
+  background-image: url("../public/images/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
