--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,13 @@ body {
   font-family: Arial, sans-serif;
 }
 
-header {
+/* header {
   background-color: #007bff;
   color: white;
   padding: 20px;
   text-align: center;
   font-size: 24px;
-}
+} */
 
 .container {
   padding: 20px;
